; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_super.c_destroy_super.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_super.c_destroy_super.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { %struct.super_block*, %struct.super_block* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.super_block*)* @destroy_super to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_super(%struct.super_block* %0) #0 {
  %2 = alloca %struct.super_block*, align 8
  store %struct.super_block* %0, %struct.super_block** %2, align 8
  %3 = load %struct.super_block*, %struct.super_block** %2, align 8
  %4 = call i32 @security_sb_free(%struct.super_block* %3)
  %5 = load %struct.super_block*, %struct.super_block** %2, align 8
  %6 = call i32 @destroy_sb_writers(%struct.super_block* %5)
  %7 = load %struct.super_block*, %struct.super_block** %2, align 8
  %8 = getelementptr inbounds %struct.super_block, %struct.super_block* %7, i32 0, i32 1
  %9 = load %struct.super_block*, %struct.super_block** %8, align 8
  %10 = call i32 @kfree(%struct.super_block* %9)
  %11 = load %struct.super_block*, %struct.super_block** %2, align 8
  %12 = getelementptr inbounds %struct.super_block, %struct.super_block* %11, i32 0, i32 0
  %13 = load %struct.super_block*, %struct.super_block** %12, align 8
  %14 = call i32 @kfree(%struct.super_block* %13)
  %15 = load %struct.super_block*, %struct.super_block** %2, align 8
  %16 = call i32 @kfree(%struct.super_block* %15)
  ret void
}

declare dso_local i32 @security_sb_free(%struct.super_block*) #1

declare dso_local i32 @destroy_sb_writers(%struct.super_block*) #1

declare dso_local i32 @kfree(%struct.super_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
